add some utils in Dockerfile